<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_name">Liquorder</string>
    <string name="transition_cellarer">transition_cellarer</string>
    <string name="transition_cart">transition_cart</string>
    <string name="please_login_again">token已過期，請重新登入</string>
    <string name="fragment_create_order">建立訂單</string>
    <string name="fragment_orders">訂單查詢</string>
    <string name="fragment_favorites">偏好品項</string>
    <string name="fragment_cart">購物車</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">登入</string>
    <string name="commit">確定</string>
    <string name="cancel">取消</string>
    <string name="save">儲存</string>
    <string name="submit">送出</string>
    <string name="wanna_finish_app">確定關閉退出應用程式？</string>
    <string name="complete_email_password">請填妥信箱、密碼</string>
    <string name="network_connection_timeout">網路連線逾時！</string>
    <string name="network_connection_fail">網路連線失敗，請檢察網路！</string>
    <string name="server_error">伺服器發生異常，請稍後再試</string>
    <string name="capacity">%1$d c.c.</string>
    <string name="price">$ %1$d</string>
    <string name="subtitle">$小計：%1$d</string>
    <string name="menu_item_quantity">%1$d x </string>
    <string name="menu_id_error">menu id錯誤，請稍後再試</string>
    <string name="cart">購物車</string>
    <string name="add_to_cart">加入購物車</string>
    <string name="go_to_cart">查看購物車</string>
    <string name="add_order">加定</string>
    <string name="total_amount">合計</string>
    <string name="update">更新</string>
    <string name="order_process_done">訂單處理成功！</string>
    <string name="cart_is_not_empty">購物車內尚有品項尚未儲存或送出，確定要退出？</string>
    <string name="start_date">開始日期：</string>
    <string name="end_date">結束日期：</string>
    <string name="unlimited">不限</string>
    <string name="logout">登出</string>
    <string name="date">%1$d-%2$d-%3$d</string>
    <string name="favorite_process_fail">%1$s處理失敗</string>
</resources>
