<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.infolai.liquorder.views.fragments.CreateOrderFragment"
        android:label="@string/fragment_create_order"
        tools:layout="@layout/fragment_create_order" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.infolai.liquorder.views.fragments.OrdersFragment"
        android:label="@string/fragment_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.infolai.liquorder.views.fragments.FavoritesFragment"
        android:label="@string/fragment_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.infolai.liquorder.views.fragments.LogoutFragment"
        android:label="@string/fragment_cart"
        tools:layout="@layout/fragment_logout" />
</navigation>