<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.CartActivity"
    android:id="@+id/clRoot"
    android:transitionName="@string/transition_cart">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/cart"
        app:subtitle="@string/fragment_favorites"
        android:theme="@style/CartAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/previous"/>
    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/buttonBarStyle"
        android:weightSum="2">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_size"
            android:background="@drawable/save_button_radius"
            android:textColor="@color/white"
            android:text="@string/save"
            android:layout_marginStart="@dimen/item_padding"
            android:layout_marginEnd="@dimen/item_half_padding"
            android:layout_marginTop="@dimen/item_padding"
            android:layout_marginBottom="@dimen/item_padding"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_size"
            android:background="@drawable/submit_button_radius"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:layout_marginStart="@dimen/item_half_padding"
            android:layout_marginEnd="@dimen/item_padding"
            android:layout_marginTop="@dimen/item_padding"
            android:layout_marginBottom="@dimen/item_padding"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llAmount"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_layout_border_shadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llButtons"
        android:weightSum="5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_padding"
            android:text="@string/total_amount"
            android:textSize="@dimen/bottom_sheet_text"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_padding"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="@dimen/bottom_sheet_text"
            android:layout_weight="4" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/llAmount"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_padding"
        android:src="@drawable/menu_add"
        android:visibility="visible"
        app:backgroundTint="@color/colorPrimary"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@id/rvItems"
        app:layout_constraintBottom_toBottomOf="@id/rvItems"
        android:transitionName="@string/transition_cart"/>
    <ProgressBar
        android:id="@+id/pbLoading"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:indeterminateTint="@color/gray"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>