<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.LoginActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"/>
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/title_brown"
        android:scaleType="fitCenter"
        android:padding="30dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_dialog_email"
        android:drawablePadding="@dimen/edit_text_drawable_padding"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/input_size"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_menu_login"
        android:drawablePadding="@dimen/edit_text_drawable_padding"
        android:inputType="textPassword"
        android:textSize="@dimen/input_size"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="@dimen/button_size"/>
    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:elevation="2dp"
        android:layout_width="0dp"
        android:alpha="0.5"
        android:indeterminateTint="@color/gray"
        android:background="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintTop_toTopOf="@id/btnLogin"
        app:layout_constraintBottom_toBottomOf="@id/btnLogin"
        android:layout_gravity="center_vertical"/>


</androidx.constraintlayout.widget.ConstraintLayout>